# haskell_project

./: MczParser.cabal  README.md  out.txt  test.txt
app/: Main.hs
src/: Lib.hs  Lib2.hs
