name:                MczParser
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/MczParser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lib2
  build-depends:       base >= 4.7 && < 5
                       ,text
                       ,attoparsec
                       ,mtl
  default-language:    Haskell2010

executable MczParser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , text
                     , attoparsec
                     , mtl
                     , MczParser
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/MczParser
